--- a/DJsMRIToolset.csproj
+++ b/DJsMRIToolset.csproj
@@ -13,6 +13,11 @@
 		either BOTH runtimes must be indicated or ONLY macatalyst-x64. -->
 		<!-- For example: <RuntimeIdentifiers>maccatalyst-x64;maccatalyst-arm64</RuntimeIdentifiers> -->
 
+        <!-- Windows packaging requirement -->
+        <WindowsPackageType>None</WindowsPackageType>
+        <WindowsAppSDKSelfContained Condition="'$(IsUnpackaged)' == 'true'">true</WindowsAppSDKSelfContained>
+        <SelfContained Condition="'$(IsUnpackaged)' == 'true'">true</SelfContained>
+
 		<OutputType>Exe</OutputType>
 		<RootNamespace>DJsMRIToolset</RootNamespace>
 		<UseMaui>true</UseMaui>
