--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 *.user
 *.userosscache
 *.sln.docstates
+DJsMRIToolsetInstaller.exe
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
