--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,8 +23,11 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        dotnet workload install maui-android
         sudo apt-get install -y openjdk-11-jdk
+        dotnet workload install maui-android
+        dotnet workload install maui-ios
+        dotnet workload install maui-maccatalyst
+        dotnet workload install maui-windows        
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
